# inboxlayer-python-sdk

./: .gitignore  README.md  REFERENCE.md  pyproject.toml
docs/openapi/: api-v1.json
scripts/: test_all_methods.py
src/inboxlayer_sdk/: __init__.py  cli.py  client.py  contracts.py  exceptions.py  models.py  request_options.py  security.py  streams.py
tests/: test_cli_contracts.py  test_streams.py
