[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inboxlayer-sdk"
version = "0.1.0"
description = "Inbox Layer Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Inbox Layer" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "anyio>=4.4,<5",
  "typing-extensions>=4.11; python_version<'3.11'",
]

[project.urls]
Homepage = "https://inboxlayer.dev"
Repository = "https://github.com/inboxlayer/inboxlayer-python-sdk"

[project.scripts]
inboxlayer-check-contract = "inboxlayer_sdk.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inboxlayer_sdk = ["openapi/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party"]
